--- a/src/assets/experience/world/secret-shop/index.html
+++ b/src/assets/experience/world/secret-shop/index.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-  <script src="js/earth.js"></script>
+  <script src="js/marker.js"></script>
+  <script src="js/secret-shop.js"></script>
 </body>
 
 </html>
